; ModuleID = '/home/carl/AnghaBench/php-src/Zend/extr_zend_inheritance.c_class_visible.c'
source_filename = "/home/carl/AnghaBench/php-src/Zend/extr_zend_inheritance.c_class_visible.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_7__ = type { i64, %struct.TYPE_6__ }
%struct.TYPE_6__ = type { %struct.TYPE_5__ }
%struct.TYPE_5__ = type { i32 }

@ZEND_INTERNAL_CLASS = common dso_local global i64 0, align 8
@compiler_options = common dso_local global i32 0, align 4
@ZEND_COMPILE_IGNORE_INTERNAL_CLASSES = common dso_local global i32 0, align 4
@ZEND_USER_CLASS = common dso_local global i64 0, align 8
@ZEND_COMPILE_IGNORE_OTHER_FILES = common dso_local global i32 0, align 4
@compiled_filename = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.TYPE_7__*)* @class_visible to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @class_visible(%struct.TYPE_7__* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.TYPE_7__*, align 8
  store %struct.TYPE_7__* %0, %struct.TYPE_7__** %3, align 8
  %4 = load %struct.TYPE_7__*, %struct.TYPE_7__** %3, align 8
  %5 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %4, i32 0, i32 0
  %6 = load i64, i64* %5, align 8
  %7 = load i64, i64* @ZEND_INTERNAL_CLASS, align 8
  %8 = icmp eq i64 %6, %7
  br i1 %8, label %9, label %17

9:                                                ; preds = %1
  %10 = load i32, i32* @compiler_options, align 4
  %11 = call i32 @CG(i32 %10)
  %12 = load i32, i32* @ZEND_COMPILE_IGNORE_INTERNAL_CLASSES, align 4
  %13 = and i32 %11, %12
  %14 = icmp ne i32 %13, 0
  %15 = xor i1 %14, true
  %16 = zext i1 %15 to i32
  store i32 %16, i32* %2, align 4
  br label %42

17:                                               ; preds = %1
  %18 = load %struct.TYPE_7__*, %struct.TYPE_7__** %3, align 8
  %19 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %18, i32 0, i32 0
  %20 = load i64, i64* %19, align 8
  %21 = load i64, i64* @ZEND_USER_CLASS, align 8
  %22 = icmp eq i64 %20, %21
  %23 = zext i1 %22 to i32
  %24 = call i32 @ZEND_ASSERT(i32 %23)
  %25 = load i32, i32* @compiler_options, align 4
  %26 = call i32 @CG(i32 %25)
  %27 = load i32, i32* @ZEND_COMPILE_IGNORE_OTHER_FILES, align 4
  %28 = and i32 %26, %27
  %29 = icmp ne i32 %28, 0
  br i1 %29, label %30, label %39

30:                                               ; preds = %17
  %31 = load %struct.TYPE_7__*, %struct.TYPE_7__** %3, align 8
  %32 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %31, i32 0, i32 1
  %33 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %32, i32 0, i32 0
  %34 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %33, i32 0, i32 0
  %35 = load i32, i32* %34, align 8
  %36 = load i32, i32* @compiled_filename, align 4
  %37 = call i32 @CG(i32 %36)
  %38 = icmp eq i32 %35, %37
  br label %39

39:                                               ; preds = %30, %17
  %40 = phi i1 [ true, %17 ], [ %38, %30 ]
  %41 = zext i1 %40 to i32
  store i32 %41, i32* %2, align 4
  br label %42

42:                                               ; preds = %39, %9
  %43 = load i32, i32* %2, align 4
  ret i32 %43
}

declare dso_local i32 @CG(i32) #1

declare dso_local i32 @ZEND_ASSERT(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
